plugins {
    id 'java'
}


//apply plugin: 'maven'

group 'com.zyx.jl'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}
apply plugin: 'application'

//task writeNewPom {
//    pom {
//        project {
//            inceptionYear '2018'
//            licenses {
//                license {
//                    name 'The Apache Software License, Version 2.0'
//                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
//                    distribution 'repo'
//                }
//            }
//        }
//    }.writeTo("pom.xml")
//}

applicationDefaultJvmArgs = [
        '-Xms10G -Xmx10G',
        '-XX:ReservedCodeCacheSize=256m -XX:InitialCodeCacheSize=256m',
        '-XX:+UnlockExperimentalVMOptions -XX:+UseZGC',
        '-XX:ConcGCThreads=2 -XX:ParallelGCThreads=6',
        '-XX:ZCollectionInterval=120 -XX:ZAllocationSpikeTolerance=5',
        '-XX:+UnlockDiagnosticVMOptions -XX:-ZProactive',
        '-Xlog:safepoint,classhisto*=trace,age*,gc*=info:file=/opt/logs/logs/gc-%t.log:time,tid,tags:filecount=5,filesize=50m',
]

dependencies {
    compile group: 'joda-time', name: 'joda-time',version: '2.10.4'
    compile(group: 'com.alibaba', name: 'fastjson', version: "1.2.60")
    compile(group: 'com.alibaba', name: 'transmittable-thread-local', version: "2.11.4")
    compile(group: 'com.google.guava', name: 'guava', version: "20.0")
    testCompile group: 'junit', name: 'junit', version: '4.12'

    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
    testCompileOnly 'org.projectlombok:lombok:1.18.12'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
}
